<resources>
    <string name="app_name">iRP</string>
    <string name="userName_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="add_donation">Add A New Donation</string>
    <string name="logout">Logout</string>
    <string name="view_locations">View Locations / Items</string>
    <string name="admin_page">Admin Page</string>
    <string name="load_locations">Load Locations</string>
    <string name="user_page">User Page</string>
    <string name="local_employee_page">Local Employee Page</string>
    <string name="location_name">Location Name: </string>
    <string name="street_address">Street Address: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zip_code">Zip Code: </string>
    <string name="location_type">Location Type: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="website">Website: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="locations">Locations</string>
    <string name="view_location_details">View Location Details</string>
    <string name="login">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="manager_page">Manager Page</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="choose_user_type">Choose User Type</string>
    <string name="add_button">Add</string>
    <string name="irp">iRP</string>
    <string name="registration">Registration</string>
    <string name="irp_description">an internal resource planning app</string>
    <string name="item_list">Item List</string>
    <string name="view_item">View Item</string>
    <string name="back">Back</string>
    <string name="add_donation_page">Add Donation Page</string>
    <string name="time_stamp">Time Stamp Of Donation</string>
    <string name="date">Date Of Donation</string>
    <string name="value">Value (in dollars)</string>
    <string name="short_description">Short Description</string>
    <string name="full_description">Full Description</string>
    <string name="submit">Submit</string>

    <string name="time_stamp_colon">Time Stamp: </string>
    <string name="date_stamp_colon">Date Stamp: </string>
    <string name="category_colons">Category : </string>
    <string name="location_colon">Location : </string>
    <string name="value_colon">Value: </string>
    <string name="short_description_colon">Short Description: </string>
    <string name="full_description_colon">Full Description: </string>

    <string name="load_data">Load Data</string>
    <string name="save_data">Save Data</string>

    <string name="clear_data">Clear Data</string>

    <string name="search_by_name">Search Item By Name</string>
    <string name="search_by_category">Search Item By Category</string>

    <string name="title_activity_maps">Map</string>

    <string name="view_map">View Map</string>

    <string name="login_administrator">Login Admin</string>
    <string name="login_localEmployee">Login Local Employee</string>
    <string name="login_manager">Login Manager</string>
    <string name="login_user">Login User</string>

</resources>
